<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Welcome Page -->
    <string name="welcome_page_title">Добро\nпожаловать\nв TechnoStore</string>
    <string name="welcome_page_subtitle">Открой мир Технологий!</string>
    <string name="welcome_page_next_button">Продолжить</string>

    <!--Sign in-->
    <string name="sign_in_title">Вход</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="sign_in">ВОЙТИ</string>
    <string name="sign_in_register_button">Зарегистрироваться</string>
    <string name="sign_in_no_account">Нет аккаунта?</string>
    <string name="sign_in_invalid_password">Неправильный пароль</string>

    <!--Registration-->
    <string name="registration">Регистрация</string>
    <string name="registration_password">Пароль</string>
    <string name="registration_sign_in">Войти</string>
    <string name="registration_have_an_account">Есть аккаунт?</string>
    <string name="registration_photo">Фото</string>
    <string name="registration_first_name_user">Имя</string>
    <string name="registration_enter_your_first_name">Введите ваше имя</string>
    <string name="registration_last_name_user">Фамилия</string>
    <string name="registration_enter_your_last_name">Введите вашу фамилию</string>
    <string name="registration_email_exists">Пользователь с таким email уже существует</string>

    <!--Login-->
    <string name="login_empty_field">Введите данные</string>
    <string name="login_email">Email</string>
    <string name="login_enter_password">Введите пароль</string>
    <string name="login_repeat_password">Повторите пароль</string>
    <string name="login_password">Пароль</string>
    <string name="login_enter_email">Введите email</string>
    <string name="login_next">Далее</string>
    <string name="login_error_max_length">Пароль должен состоять не болee, чем из 255 символов</string>
    <string name="login_email_error">Введите корректный email</string>
    <string name="login_password_error_symbols">Используйте только латинские буквы и цифры</string>
    <string name="login_password_error_min_length">Пароль должен состоять не менее, чем из 6 символов</string>
    <string name="login_passwords_are_broken">Пароли должны совпадать</string>
    <string name="login_email_is_not_exists">Пользователя с таким email не существует</string>
    <string name="login_email_error_length">Почта должна состоять не болee, чем из 255 символов</string>

    <!--Confirm code-->
    <string name="confirm_code_enter_code">Введите код, который Вам\n пришел на почту</string>
    <string name="confirm_code_error">Код неверный</string>

    <!--Password recovery-->
    <string name="password_recovery">Восстановление пароля</string>
    <string name="password_recovery_enter_new_password">Введите новый пароль.</string>
    <string name="password_recovery_confirm">Подтвердить</string>
    <string name="password_recovery_instruction">Для восстановления доступа на ваш Email будет выслан код для подтверждения.</string>
    <string name="password_recovery_code">Код</string>
    <string name="password_recovery_code_instruction">Проверьте почту.\n\n Введите код подтверждения.</string>
    <string name="password_recovery_enter_code">Введите код</string>
    <string name="password_recovery_send_code_again">Отправить код повторно</string>
    <string name="password_recovery_code_error_length">Пароль слишком длинный</string>
</resources>