<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_5x" />

    <include
        android:id="@+id/include"
        layout="@layout/background_circles" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/back_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/back_panel_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_5x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintHeight_percent="0.62"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_password_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10x"
            android:text="@string/password_recovery"
            android:textColor="@color/basic_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_password_recovery_instruction"
            style="@style/inter_regular_style_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_10x"
            android:gravity="center"
            android:paddingStart="@dimen/space_2x"
            android:paddingEnd="@dimen/space_2x"
            android:text="@string/password_recovery_code_instruction"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_recovery" />

        <TextView
            android:id="@+id/tv_code"
            style="@style/black_style_roboto_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/password_recovery_code"
            android:textColor="@color/light_color_text"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_recovery_instruction" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:textColorHint="@color/icon_nav_not_selected"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeErrorColor="@android:color/transparent"
            app:endIconMode="custom"
            app:endIconTint="@android:color/transparent"
            app:errorTextColor="@color/negative_rating"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_code"
            app:prefixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/password_recovery_enter_code"
                android:inputType="number"
                android:paddingHorizontal="@dimen/space_2x"
                android:paddingVertical="@dimen/space_2x"
                android:textColor="@color/color_accent"
                android:textColorHint="@color/tv_hint"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/v_empty_view"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_code" />

        <TextView
            android:id="@+id/tv_button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="@dimen/space_6x"
            android:background="@drawable/sign_in_button_background"
            android:gravity="center"
            android:paddingVertical="@dimen/space_2x"
            android:text="@string/login_next"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_code"
            app:layout_constraintWidth_percent="0.55" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_book"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/computer_icon_background"
        android:padding="@dimen/space_5x"
        android:src="@drawable/icon_computer"
        app:layout_constraintBottom_toTopOf="@id/back_panel"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start" />

    <TextView
        android:id="@+id/tv_skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_recovery_send_code_again"
        android:textColor="@color/basic_color"
        android:textSize="12sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintBottom_toBottomOf="@+id/back_panel" />

    <include
        android:id="@+id/login_loading"
        layout="@layout/loading_fragment"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>