<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_5x" />

    <include layout="@layout/background_circles" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/back_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.62"
        android:layout_marginTop="60dp"
        android:background="@drawable/back_panel_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/space_5x"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/basic_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/space_10x"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_3x"
            android:text="@string/login_email"
            android:textColor="@color/light_color_text"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_registration"
            style="@style/black_style_roboto_text"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:textColorHint="@color/icon_nav_not_selected"
            app:boxStrokeColor="@android:color/transparent"
            app:boxStrokeErrorColor="@android:color/transparent"
            app:endIconMode="custom"
            app:endIconTint="@android:color/transparent"
            app:errorTextColor="@color/negative_rating"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email"
            app:prefixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_text_background"
                android:gravity="center_vertical"
                android:hint="@string/login_enter_email"
                android:textColorHint="@color/tv_hint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/space_2x"
                android:paddingVertical="@dimen/space_2x"
                android:textColor="@color/color_accent"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/v_empty_view_near_email"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_email"
            app:layout_constraintTop_toTopOf="@id/til_email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/space_20x"
            android:text="@string/login_password"
            android:textColor="@color/light_color_text"
            android:textSize="13sp"
            style="@style/black_style_roboto_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_empty_view_near_email"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_password_back_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/icon_nav_not_selected"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeErrorColor="@android:color/transparent"
                app:endIconMode="password_toggle"
                app:errorTextColor="@color/negative_rating"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:prefixTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/login_enter_password"
                    android:textColorHint="@color/tv_hint"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/space_2x"
                    android:paddingVertical="@dimen/space_2x"
                    android:textColor="@color/color_accent"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/v_empty_view_near_password"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_password"
            app:layout_constraintTop_toTopOf="@id/cl_password_back_panel" />

        <TextView
            android:id="@+id/tv_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/space_20x"
            android:text="@string/login_repeat_password"
            android:textColor="@color/light_color_text"
            android:textSize="13sp"
            style="@style/black_style_roboto_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_empty_view_near_password"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_password_back_panel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_repeat_password">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColorHint="@color/icon_nav_not_selected"
                app:boxStrokeColor="@android:color/transparent"
                app:boxStrokeErrorColor="@android:color/transparent"
                app:endIconMode="password_toggle"
                app:errorTextColor="@color/negative_rating"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:prefixTextColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/login_enter_password"
                    android:textColorHint="@color/tv_hint"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/space_2x"
                    android:paddingVertical="@dimen/space_2x"
                    android:textColor="@color/color_accent"
                    android:textCursorDrawable="@null"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/v_empty_view_near_repeat_password"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_repeat_password"
            app:layout_constraintTop_toTopOf="@id/cl_password_back_panel2" />

        <TextView
            android:id="@+id/tv_button_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="95dp"
            android:background="@drawable/sign_in_button_background"
            android:paddingVertical="@dimen/space_2x"
            android:gravity="center"
            android:text="@string/login_next"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintWidth_percent="0.55"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/cl_have_account_sign_in"
            app:layout_constraintTop_toBottomOf="@id/v_empty_view_near_repeat_password" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_have_account_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_2x"
            android:layout_marginBottom="@dimen/space_2x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_05x"
                android:text="@string/registration_have_an_account"
                android:textColor="@color/color_accent"
                android:textSize="11sp"
                app:layout_constraintEnd_toStartOf="@id/tv_signin"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_sign_in"
                android:textColor="@color/basic_color"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_no_account"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_book"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/computer_icon_background"
        android:padding="@dimen/space_5x"
        android:src="@drawable/icon_computer"
        app:layout_constraintBottom_toTopOf="@id/back_panel"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start" />

    <include
        android:id="@+id/login_loading"
        layout="@layout/loading_fragment"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>